--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,4 +1,17 @@
 body {
-    background:#999;
+    background: #999999;;
+    font-family:arial;
 }
 
+h2,h3, p,li {
+ color: rgb(85, 85, 85); 
+}
+
+a {
+    color: green;
+}
+p{
+    background: #666;
+    color: white;
+    padding: 10px 0px;
+}
