--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,9 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
+/* @media only screen and (min-width:550px) {
+  body{ background-color: lightblue;} */
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
