--- a/src/App.css
+++ b/src/App.css
@@ -6,15 +6,23 @@
   height: 40vmin;
   pointer-events: none;
 }
-
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
 }
 /* @media only screen and (min-width:550px) {
-  body{ background-color: lightblue;} */
+  body{ background-color: lightblue;} 
 }
+@media only screen and (min-width:750px) {
+  body{ background-color: lightblue;} 
+}
+@media only screen and (min-width:960px) {
+  body{ background-color: lightblue;} 
+}
+@media only screen and (min-width:1140px) {
+  body{ background-color: lightblue;} 
+} */
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
