--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
-.App {
+/* .App {
   text-align: center;
 }
 .App-logo {
   height: 40vmin;
-  pointer-events: none;
-}
+  pointer-events: none; 
+}*/
 /* @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -22,7 +22,7 @@
 @media only screen and (min-width:1140px) {
   body{ background-color: rgb(241, 123, 76);} 
 }
-.App-header {
+/* .App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -31,9 +31,9 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
+} */
 
-.App-link {
+/* .App-link {
   color: #61dafb;
 }
 
@@ -44,4 +44,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
