--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,17 @@
-/* .App {
+.App {
   text-align: center;
 }
 .App-logo {
   height: 40vmin;
   pointer-events: none; 
-}*/
-/* @media (prefers-reduced-motion: no-preference) {
+}
+@media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-} */
-@media only screen and (min-width:550px) {
-  body{ background-color: rgb(49, 196, 245);} 
 }
-@media only screen and (min-width:750px) {
-  body{ background-color: rgb(233, 247, 108);} 
-}
-@media only screen and (min-width:960px) {
-  body{ background-color: rgb(90, 128, 233);} 
-}
-@media only screen and (min-width:1140px) {
-  body{ background-color: rgb(241, 123, 76);} 
-}
-/* .App-header {
+
+.App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -31,9 +20,9 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-} */
+}
 
-/* .App-link {
+.App-link {
   color: #61dafb;
 }
 
@@ -44,4 +33,4 @@
   to {
     transform: rotate(360deg);
   }
-} */
+}
