--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -5,7 +5,7 @@ body {
 
 /*media queries */
 @media only screen and (max-width: 540px) {
-    img{ display: none;}
+    img{display: none;}
 }
 @media only screen and (min-width:720px) {
     body {
@@ -20,6 +20,7 @@ body {
 @media only screen and (min-width:1140px) {
     body {
         background-color: rgb(130, 90, 241);
+        color: black;
     }
 }
 
